[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.8.1"
thiserror = "=1.0.30"
spl-token = {version = "=3.2.0", features = ["no-entrypoint"]}

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.8.1"
solana-sdk = "=1.8.1"
solana-validator = "=1.8.1"
#openssl-sys = "=0.9.70"

[lib]
crate-type = ["cdylib", "lib"]
